added action in index.html. created the java program

--- a/locust/src/main/webapp/index.html
+++ b/locust/src/main/webapp/index.html
@@ -5,9 +5,13 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<td>Username<td/>
-	<input type = "text" id = "username" name = "username" />
-	<td>Password<td/>
-	<input type = "password" id = "password" name = "password" />
+	<form action = "login" method = "get">
+		<td>Username<td/>
+		<input type = "text" id = "username" name = "username" />
+		<td>Password<td/>
+		<input type = "password" id = "password" name = "password" />
+		
+		<input type = "submit" id = "submit" value = "login" />
+	</form>
 </body>
 </html>
