new change in application properties. more library importing code added in locust application and sarojloginservlet. few changes made in index too.

--- a/locust/src/main/webapp/index.html
+++ b/locust/src/main/webapp/index.html
@@ -6,12 +6,18 @@
 </head>
 <body>
 	<form action = "login" method = "get">
-		<td>Username<td/>
-		<input type = "text" id = "username" name = "username" />
-		<td>Password<td/>
-		<input type = "password" id = "password" name = "password" />
-		
-		<input type = "submit" id = "submit" value = "login" />
+		<table>
+			<br>
+				<tr>
+					<td>Username<td/>
+					<input type = "text" id = "username" name = "username" />
+					<td>Password<td/>
+					<input type = "password" id = "password" name = "password" />
+					
+					<input type = "submit" id = "submit" value = "login" />
+				</tr>
+			</br>
+		</table>
 	</form>
 </body>
 </html>
