some changes in existing project and add some new project.

--- a/locust/src/main/webapp/index.html
+++ b/locust/src/main/webapp/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link href="/index.css" rel="stylesheet" type="text/css"></link>
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
@@ -9,12 +10,16 @@
 		<table>
 			<br>
 				<tr>
-					<td>Username<td/>
-					<input type = "text" id = "username" name = "username" />
-					<td>Password<td/>
-					<input type = "password" id = "password" name = "password" />
-					
-					<input type = "submit" id = "submit" value = "login" />
+					<td> userid   </td>
+					<td> <input type="text" id="username" name="username" />  </td>
+				</tr>
+				<tr>
+					<td>  password  </td>
+					<td> <input type="password" id="password" name="password" /> </td>
+				</tr>
+				<tr>
+					<td> submit </td>
+					<td> <input type="submit" id = "submit" value = "login"/></td>
 				</tr>
 			</br>
 		</table>
